# py-proj-dockerizer

./: README.md
templates/: README.md  init_git.sh
templates/python/: Dockerfile  Makefile  circleci_config.yml  gitignore  pyproject.toml
