[tool.poetry]
name = "docker_image_name"
version = "0.1.0"
description = "fixme"
authors = ["FixMe <fixme@duck.com>"]

[tool.poetry.dependencies]
python = ">=3.9.15,<3.10"

[tool.poetry.dev-dependencies]
ipython = "^7.31.1"
pytest = "^7.1.1"
pytest-cov = "^3.0.0"
pytest-mock = "^3.5.1"
black = "^20.8b1"
python-dotenv = "^0.19.2"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"